--- a/File-Integrity-Scanner/pom.xml
+++ b/File-Integrity-Scanner/pom.xml
@@ -72,18 +72,18 @@
 
 
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
-        <!--
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>3.5.3</version>
-        </dependency>     -->
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
-       <!-- <dependency>
+        <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>42.7.5</version>
-        </dependency> -->
+            <version>42.7.7</version>
+        </dependency>
 
 
 
